tests/ui/macros/issue-78325-inconsistent-resolution.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/issue-78325-inconsistent-resolution.rs:3:9
   |
LL | / macro_rules! define_other_core {
LL | |     ( ) => {
LL | |         extern crate std as core;
   | |         ^^^^^^^^^^^^^^^^^^^^^^^^^
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `define_other_core!`
...
LL |   define_other_core!();
   |   -------------------- in this macro invocation

error: aborting due to previous error

